# cargo build --target=i686-pc-windows-msvc
# rustup default stable-i686-pc-windows-gnu <-----

[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "i686-pc-windows-msvc"

[lib]
crate-type = ["cdylib"]

[dependencies]